minor update / directory name chaned

--- a/main-plot.ipynb
+++ b/main-plot.ipynb
@@ -37,7 +37,7 @@
     "from scipy.fftpack import fft, ifft\n",
     "\n",
     "import sys\n",
-    "sys.path.append(\"../library-Git/\")\n",
+    "sys.path.append(\"../library/\")\n",
     "from defaultPlot import *\n",
     "from readData import read, readPoints, extractRepeater\n",
     "from stringFormat import *\n",
